@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mono.Rocks\Check.cs" />
+    <Compile Include="Mono.Rocks\ICustomAttributeProvider.cs" />
     <Compile Include="Mono.Rocks\IEnumerable.cs" />
     <Compile Include="Mono.Rocks\Int32.cs" />
     <Compile Include="Mono.Rocks\String.cs" />
