@@ -1,5 +1,6 @@
 ./Mono.Rocks/AssemblyInfo.cs
 ./Mono.Rocks/Check.cs
+./Mono.Rocks/ICustomAttributeProvider.cs
 ./Mono.Rocks/IEnumerable.cs
 ./Mono.Rocks/Int32.cs
 ./Mono.Rocks/String.cs
